[fix] update requirements.txt to fix issue cuda for llama cpp

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ transformers
 accelerate
 sentencepiece
 bitsandbytes
+--extra-index-url=https://abetlen.github.io/llama-cpp-python/whl/cu124
 llama-cpp-python 
